--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vehiculos</title>
 </head>
 <body>
-    
-    
+    <main-page></main-page>
+    <script src="./components/main-page.js" type="module"></script>
 </body>
 </html>
